--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -14,12 +14,6 @@
     align-items: center;
     padding:0px 30px;
     z-index: 10;
-    #menuSide{
-        display: none;
-        &:checked ~ .menuSide{
-            transform: translate(0%);
-        }
-    }
     label{
         .drawerIcon{
             width:30px;
@@ -48,6 +42,12 @@
                     filter:drop-shadow(0 0 6px #696061);
                 }
             }
+        }
+    }
+    #menuSide{
+        display: none;
+        &:checked ~ .menuSide{
+            transform: translate(0%);
         }
     }
     .menuIcons{
@@ -87,11 +87,10 @@
     .menuSide{
         width:20vw;
         height: 100vh;
-        display:flex;
         position: fixed;
         top:0;
         left:0;
-        z-index: 10px;
+        display:flex;
         flex-direction: column;
         justify-content:space-between;
         align-items: flex-start;
@@ -99,28 +98,23 @@
         overflow: hidden;
         box-shadow: 0 0 10px 6px #070707;
         z-index: 10;
-        transform: translate(-105%);
+        transform: translate(0%);
         transition: .3s ease-in-out;
         .top{
-            width: 100%;
+            width:100%;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
-            padding: 5px 20px 0px 0px;
+            background-color: #181818;
+            padding: 10px;
             .brand{
-                width: 45px;
-                position: absolute;
-                top:10px;
-                left:25px;
+                width:45px;
             }
             label{
                 .close{
                     width:25px;
                     cursor: pointer;
-                    position: absolute;
-                    top:20px;
-                    right:25px;
                     transform: rotate(0deg);
                     transition: all 0.3s ease-in-out;
                     &:hover{
@@ -132,36 +126,49 @@
         .menu{
             width:100%;
             ul{
-                width: 100%;
+                width:100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: flex-start;
+                padding-left: 0;
                 li{
-                    width:100%;
+                    width: 100%;
                     list-style-type: none;
-                    padding: 10px 0px;
+                    cursor: pointer;
+                    background-color: #141414;
                     .link{
-                        width:100%;
-
+                        display: block;
+                        width: inherit;
+                        padding-top: 10px;
+                        padding-bottom:10px;
+                        padding-left: 30px;
+                        padding-right: 100px;
+                        font-size: 1rem;
+                        font-family: $fontJura;
+                        color:#ffffff;
+                        font-weight: 600;
                         text-decoration: none;
-                        color:rgb(194, 193, 193);
-                        font-size: .9rem;
-                        font-family: $fontJura;transition:all .5s;
                         &:hover{
-                            text-decoration: underline;
-                            filter: drop-shadow(0 0 6px #BC2327);
+                            background-color: #bc232859;
                         }
                     }
                     .cartShop{
-                        width:100%;
-                        padding-bottom: 10px;
-                        border-bottom: 1px solid rgb(61, 61, 61);
+                        width: 100%;
+                        cursor: pointer;
                         .link{
+                            display: block;
                             width:100%;
-                            text-decoration: none;
-                            color:rgb(194, 193, 193);
-                            font-size: .9rem;
-                            font-family: $fontJura;transition:all .5s;
+                            font-size: 1rem;
+                            font-family: $fontJura;
+                            color:#ffffff;
+                            font-weight: 600;
+                            margin: 0px auto 0px 0px;
+                            padding-bottom: 15px;
+                            border-bottom: 1px solid #6b6b6b;
+                            transition: all 0.3s ease;
                             &:hover{
-                                text-decoration: underline;
-                                filter: drop-shadow(0 0 6px #BC2327);
+                                background-color: #bc232859;
                             }
                         }
                     }
@@ -169,31 +176,38 @@
             }
         }
         .contactUs{
-            display:flex;
+            width:100%;
+            display: flex;
             flex-direction: column;
-            justify-content:space-around;
+            justify-content: space-around;
             align-items: flex-start;
-            margin-left: 30px;
+            background-color: #181818;
+            padding-top: 10px;
             p{
-                color:rgb(194, 193, 193);
-                font-size: .9rem;
+                width:100%;
+                font-size: 1rem;
                 font-family: $fontJura;
+                color:#ffffff;
+                font-weight: 600;
+                padding-left: 30px;
+                border-bottom: 1px solid #6b6b6b;
+                padding-bottom: 15px;
             }
             ul{
-                display:flex;
+                width:100%;
+                display: flex;
                 flex-direction: row;
-                justify-content:center;
+                justify-content: space-between;
                 align-items: flex-start;
-                margin-left: -40px;
-                padding-top: 10px;
-                border-top: 1px solid rgb(61, 61, 61);
+                padding-left: 30px;
+                padding-right: 30px;
                 li{
+                    display: block;
                     list-style-type: none;
                     .item{
                         text-decoration: none;
                         .itemSocial{
-                            width:30px;
-                            margin: 0px 5px;
+                            width:35px;
                         }
                     }
                 }
