Main side menu done

--- a/css/main.css
+++ b/css/main.css
@@ -487,7 +487,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   overflow: hidden;
   box-shadow: 0 0 10px 6px #070707;
   z-index: 10;
-  transform: translate(0%);
+  transform: translate(-105%);
   transition: 0.3s ease-in-out;
 }
 .header .menuSide .top {
@@ -497,7 +497,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   justify-content: space-between;
   align-items: center;
   background-color: #181818;
-  padding: 10px;
+  padding: 10px 10px 10px 20px;
 }
 .header .menuSide .top .brand {
   width: 45px;
