--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -20,15 +20,15 @@ html{
             }
         }
         .sectionShop{
-            width:30vw;
+            width:40vw;
             height: 100vh;
             display:flex;
             position: fixed;
             top:0;
             right:0;
             flex-direction: column;
-            justify-content:flex-start;
-            align-items: flex-start;
+            justify-content:space-between;
+            align-items: center;
             background-color: #ffffff;
             overflow: hidden;
             box-shadow: 0 0 10px 6px #070707;
@@ -43,7 +43,7 @@ html{
                         cursor: pointer;
                         position: absolute;
                         top:20px;
-                        left:35px;
+                        left:40px;
                         transform: rotate(0deg);
                         transition: all 0.3s ease-in-out;
                         &:hover{
@@ -59,7 +59,7 @@ html{
                         justify-content: space-between;
                         align-items:flex-start;
                         margin: 0px auto;
-                        padding: 0px 10px;
+                        padding: 0px 20px;
                         height: 380px;
                         overflow: scroll;
                         position: fixed;
@@ -78,7 +78,7 @@ html{
                                 display: flex;
                                 flex-direction: row;
                                 justify-content: space-between;
-                                align-items: flex-start;
+                                align-items: center;
                                 padding: 20px 0px;
                                 border-bottom: 1px solid #e4e4e4;
                                 .titleCartlist{
@@ -100,7 +100,7 @@ html{
                                     font-size: 1rem;
                                 }
                                 .itemProduct{
-                                    width:15%;
+                                    width:12%;
                                 }
                                 .description{
                                     display: flex;
@@ -114,14 +114,15 @@ html{
                                     .icons{
                                         img{
                                             width:20px;
+                                            cursor: pointer;
                                         }
                                     }
                                 }
                                 .itemNumber{
                                     #quantity{
-                                        width:45px;
+                                        width:50px;
+                                        height:35px;
                                         padding: 2px;
-                                        text-align: left;
                                         font-size: 1rem;
                                         font-family: $fontJura;
                                         color:#BC2327;
