--- a/scss/_filter.scss
+++ b/scss/_filter.scss
@@ -85,7 +85,7 @@
                 display: flex;
                 flex-direction:column;
                 justify-content: space-between;
-                align-items:flex-start;
+                align-items:center;
                 margin: 0px auto;
                 .filterWord{
                     width: inherit;
@@ -117,13 +117,13 @@
                             display: flex;
                             flex-direction:row;
                             justify-content: space-between;
-                            align-items:flex-start;
+                            align-items:center;
                         }
                         .priceOne, .priceTwo, .priceThree{
                             display: flex;
                             flex-direction:row;
                             justify-content: space-between;
-                            align-items:flex-start;
+                            align-items: center;
                         }
                     }
                 }
