--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,6 +18,7 @@
 @import "_filter";
 @import "_sign_In";
 @import "_shipping";
+@import "_show_Room";
 @import "_footer";
 @import "_room_Dark_Mode";
 @import "_error404";
