--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -289,51 +289,81 @@
             </div>
             <div class="rightSide">
                 <div class="infoProduct">
-                    <article class="">
-
+                    <article class="productRating">
+                        <p class="product">Outfit...$499</p>
+                        <img src="../img/rating.webp" alt="Rating icon" class="rating">
+                    </article>
+                    <article class="color">
+                        <div class="color"></div>
+                    </article>
+                    <article class="Size">
+                        <div class="small">XS</div>
+                        <div class="Large">S</div>
+                        <div class="small">M</div>
+                        <div class="Large">L</div>
+                        <div class="small">XL</div>
+                        <div class="Large">XXL</div>
+                    </article>
+                    <article class="addToCart">
+                        <button class="btnAddToCart">Add to cart</button>
+                        <img src="../img/wishlist_Icon.svg" alt="">
                     </article>
                     <article class="">
-
-                    </article>
-                    <article class="">
-
-                    </article>
-                    <article class="">
-
-                    </article>
-                    <article class="">
-
+                        <div class="delivery">
+                            <img src="../img/delivery_Icon.svg" alt="Delivery icon">
+                            <p class="sentenceDelivery">For purchases over $1000
+                                You get free delivery
+                            </p>
+                        </div>
+                        <div class="creditCard">
+                            <img src="../img/credit_Card_Icon.svg" alt="Credit Card">
+                            <p class="sentenceDelivery">Oneline payment</p>
+                        </div>
+                        <div class="return">
+                            <img src="../img/return_Icon.svg" alt="Return icon">
+                            <p class="sentenceReturn">Return whithin 60 days</p>
+                        </div>
                     </article>
                 </div>
                 <div class="accordion accordion-flush containerAccordion" id="accordionFlushExample">
                     <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        Accordion Item #1
+                            <p>Reviews</p>
                         </button>
                     </h2>
                     <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                        <div class="accordion-body">
+                            <p>"I love the skater outfit I got from [Your Store Name]! It's super comfortable and looks great. Fast delivery too!"</p>
+                            <p>"The customer service at [Your Store Name] is top-notch. They helped me with a return, and it was a breeze. Will definitely shop here again!"</p>
+                            <p>"I'm impressed with the quality of the products from [Your Store Name]. The skater shorts are my new favorites. Highly recommended</p>
+                        </div>
                     </div>
                     </div>
                     <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                        Accordion Item #2
+                            <p>Description</p>
                         </button>
                     </h2>
                     <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                        <div class="accordion-body">
+                            <p>Introducing the ultimate skater's ensemble - a fusion of style, comfort, and functionality. Our Skater's Delight Outfit is designed for those who live to ride, kickflip, and carve through the urban landscape. </p>
+                            <p>Our Skater's Delight Outfit is more than just clothes; it's an expression of your passion for the streets. Perfect for the skate park, cruising through the neighborhood, or simply showcasing your love for skate culture.</p>
+                        </div>
                     </div>
                     </div>
                     <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                        Accordion Item #3
+                            <p>Delivery & Return</p>
                         </button>
                     </h2>
                     <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                        <div class="accordion-body">
+                            <p>Delivery: Fast and reliable shipping options. Track your order and enjoy worldwide delivery.</p>
+                            <p>  Return: 30-day return policy. Hassle-free process. Choose a refund or exchange. Your satisfaction is our priority.</p>
+                        </div>
                     </div>
                     </div>
                 </div>
