--- a/css/main.css
+++ b/css/main.css
@@ -3242,17 +3242,32 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 }
 
 .showRoom {
-  width: 100%;
+  width: 85%;
   height: 100vh;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
   margin: 150px auto;
+  background-color: aqua;
+  overflow: hidden;
+  font-family: "Jura", sans-serif;
 }
 .showRoom .leftSide, .showRoom .rightSide {
   width: 100%;
-  margin: 20px auto;
+  background-color: rgb(21, 255, 0);
+}
+.showRoom .rightSide .infoProduct {
+  width: 100%;
+  display: block;
+}
+.showRoom .rightSide .infoProduct .productRating {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(221, 29, 29);
 }
 
 .footerContainer {
