--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -294,23 +294,24 @@
                         <img src="../img/rating.webp" alt="Rating icon" class="rating">
                     </article>
                     <article class="color">
-                        <div class="color"></div>
+                        <div class="colorBlack"></div>
+                        <div class="colorWhite"></div>
                     </article>
-                    <article class="Size">
-                        <div class="small">XS</div>
-                        <div class="Large">S</div>
-                        <div class="small">M</div>
-                        <div class="Large">L</div>
-                        <div class="small">XL</div>
-                        <div class="Large">XXL</div>
+                    <article class="size">
+                        <div class="itemSize">XS</div>
+                        <div class="itemSize">S</div>
+                        <div class="itemSize">M</div>
+                        <div class="itemSize">L</div>
+                        <div class="itemSize">XL</div>
+                        <div class="itemSize">XXL</div>
                     </article>
                     <article class="addToCart">
                         <button class="btnAddToCart">Add to cart</button>
-                        <img src="../img/wishlist_Icon.svg" alt="">
+                        <img class="wishlistIcon" src="../img/wishlist_Icon.svg" alt="">
                     </article>
-                    <article class="">
+                    <article class="complementInfo">
                         <div class="delivery">
-                            <img src="../img/delivery_Icon.svg" alt="Delivery icon">
+                            <img class="deliveryIcon" src="../img/delivery_Icon.svg" alt="Delivery icon">
                             <p class="sentenceDelivery">For purchases over $1000
                                 You get free delivery
                             </p>
